--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-connect": "1.0.0-next.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sharp": "^0.34.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
