--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "dependencies": {
     "@google-cloud/storage": "^7.16.0",
     "@next/env": "^15.3.2",
-    "formidable": "^3.5.4",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
-    "next-connect": "1.0.0-next.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "sharp": "^0.34.1",
     "zod": "^3.24.4"
   },
