--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@auth0/nextjs-auth0": "^4.6.0",
     "@google-cloud/storage": "^7.16.0",
     "@next/env": "^15.3.2",
+    "clsx": "^2.1.1",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "sharp": "^0.34.1",
+    "tailwind-merge": "^3.3.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
@@ -27,6 +29,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-window": "^1",
+    "@types/react-window-infinite-loader": "^1",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "postcss": "^8.5.3",
