--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-icons": "^5.5.0",
     "sharp": "^0.34.1",
     "tailwind-merge": "^3.3.0",
+    "tailwind-variants": "^1.0.0",
+    "uuid": "^11.1.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
