--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/env": "^15.3.2",
     "clsx": "^2.1.1",
     "mongoose": "^8.14.2",
+    "motion": "^12.16.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
