--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.6.0",
@@ -36,6 +37,7 @@
     "@types/react-window-infinite-loader": "^1",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "husky": "^8.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
